# webkit2gtk-webextension-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Gir.toml  Makefile  README.md  gir-webkit2gtk-webextensions.toml
.github/workflows/: CI.yml  docs.yml
example/: Cargo.toml
example/src/: lib.rs
src/: dom_dom_selection.rs  dom_dom_window.rs  dom_html_field_set_element.rs  lib.rs
src/auto/: console_message.rs  context_menu.rs  context_menu_item.rs  dom_attr.rs  dom_blob.rs  dom_cdata_section.rs  dom_character_data.rs  dom_client_rect.rs  dom_client_rect_list.rs  dom_comment.rs  dom_css_rule.rs  dom_css_rule_list.rs  dom_css_style_declaration.rs  dom_css_style_sheet.rs  dom_css_value.rs  dom_document.rs  dom_document_fragment.rs  dom_document_type.rs  dom_dom_implementation.rs  dom_dom_selection.rs  dom_dom_token_list.rs  dom_dom_window.rs  dom_element.rs  dom_entity_reference.rs  dom_event.rs  dom_event_target.rs  dom_file.rs  dom_file_list.rs  dom_html_anchor_element.rs  dom_html_applet_element.rs  dom_html_area_element.rs  dom_html_base_element.rs  dom_html_base_font_element.rs  dom_html_body_element.rs  dom_html_br_element.rs  dom_html_button_element.rs  dom_html_canvas_element.rs  dom_html_collection.rs  dom_html_d_list_element.rs  dom_html_directory_element.rs  (+80 more)
webkit2gtk-webextension-sys/: Cargo.toml  Gir.toml  build.rs  versions.txt
webkit2gtk-webextension-sys/src/: lib.rs
webkit2gtk-webextension-sys/tests/: abi.rs  constant.c  layout.c  manual.h
