[package]
name = "webkit2gtk-webextension"
version = "0.6.0"
authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for the GTK+ 3 library"
repository = "https://github.com/gtk-rs/webkit2gtk-webextension-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
documentation = "https://gtk-rs.org/docs/gtk/"
keywords = ["webkit", "gtk", "gtk-rs", "GUI"]
edition = "2018"
exclude = [
    "gir-files/*",
]

[badges]
travis-ci = { repository = "gtk-rs/webkit2gtk-webextension-rs" }

[lib]
name = "webkit2gtk_webextension"

[features]
#default = ["v2_22"]
v2_2 = []
v2_8 = ["v2_2", "ffi/v2_8"]
v2_10 = ["v2_8", "ffi/v2_10"]
v2_12 = ["v2_10", "ffi/v2_12"]
v2_14 = ["v2_12", "ffi/v2_14"]
v2_16 = ["v2_14", "ffi/v2_16"]
v2_18 = ["v2_16", "ffi/v2_18"]
v2_20 = ["v2_18", "ffi/v2_20"]
v2_22 = ["v2_20", "ffi/v2_22"]

[dependencies]
gio = { git = "https://github.com/gtk-rs/gtk-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs.git" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs.git" }
gobject-sys = { git = "https://github.com/gtk-rs/gtk-rs.git" }
gtk = { git = "https://github.com/gtk-rs/gtk-rs.git" }
ffi = { package = "webkit2gtk-webextension-sys", path = "webkit2gtk-webextension-sys" }
libc = "^0.2"