[package]
name = "webkit2gtk-webextension"
version = "0.16.0"
authors = ["The Gtk-rs Project Developers"]

categories = ["api-bindings", "gui"]
description = "Rust bindings for the GTK+ 3 library"
repository = "https://github.com/gtk-rs/webkit2gtk-webextension-rs"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gtk/"
edition = "2021"

keywords = ["webkit", "gtk", "gtk-rs", "GUI"]

[badges]
travis-ci = { repository = "gtk-rs/webkit2gtk-webextension-rs" }

[lib]
name = "webkit2gtk_webextension"

[features]
v2_2 = []
v2_8 = ["v2_2", "ffi/v2_8"]
v2_10 = ["v2_8", "ffi/v2_10"]
v2_12 = ["v2_10", "ffi/v2_12"]
v2_14 = ["v2_12", "ffi/v2_14"]
v2_16 = ["v2_14", "ffi/v2_16"]
v2_18 = ["v2_16", "ffi/v2_18"]
v2_20 = ["v2_18", "ffi/v2_20"]
v2_22 = ["v2_20", "ffi/v2_22"]
v2_26 = ["v2_22", "ffi/v2_26"]
v2_28 = ["v2_26", "ffi/v2_28"]

[dependencies]
libc = "^0.2"
gio = { version = "^0.16.0", optional = true }
glib = "^0.16.0"
glib-sys = "^0.16.0"
gobject-sys = "^0.16.0"
gtk = "^0.16.0"

[dependencies.ffi]
package = "webkit2gtk-webextension-sys"
path = "./webkit2gtk-webextension-sys"
version = "^0.16"
