[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "example"
version = "0.1.0"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
glib-sys = { git = "https://github.com/gtk-rs/sys" }

[dependencies.webkit2gtk-webextension]
path = ".."

[dependencies.webkit2gtk-webextension-sys]
path = "../webkit2gtk-webextension-sys"

[features]
default = ["webkit2gtk-webextension/v2_2"]

[lib]
crate-type = ["dylib"]
