[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "example"
version = "0.1.0"

[dependencies]
glib = "^0.8.0"
glib-sys = "^0.9.0"

[dependencies.webkit2gtk-webextension-sys]
path = "../webkit2gtk-webextension-sys"

[dependencies.webkit2gtk-webextension]
path = ".."

[features]
default = ["webkit2gtk-webextension/v2_2"]

[lib]
crate-type = ["dylib"]
