[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "example"
version = "0.1.0"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs.git" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs.git" }
libc = "^0.2"

[dependencies.webkit2gtk-webextension]
path = ".."

[dependencies.webkit2gtk-webextension-sys]
path = "../webkit2gtk-webextension-sys"

[features]
default = ["webkit2gtk-webextension/v2_2"]

[lib]
crate-type = ["dylib"]
