[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gtk-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.javascriptcore-rs-sys]
git = "https://github.com/gtk-rs/javascriptcore-rs"

[dependencies.soup-sys]
git = "https://github.com/gtk-rs/soup-sys-rs"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_6 = []
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_26 = ["v2_22"]
dox = []
v2_28 = ["v2_26"]

[lib]
name = "webkit2gtk_webextension_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
links = "webkit2gtk_webextension"
name = "webkit2gtk-webextension-sys"
version = "0.5.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.webkit2gtk_web_extension_4_0]
name = "webkit2gtk-web-extension-4.0"
version = "2.4"

[package.metadata.system-deps.webkit2gtk_web_extension_4_0.feature-versions]
v2_6 = "2.6"
v2_8 = "2.8"
v2_10 = "2.10"
v2_12 = "2.12"
v2_14 = "2.14"
v2_16 = "2.16"
v2_18 = "2.18"
v2_20 = "2.20"
v2_22 = "2.22"
v2_26 = "2.26"
v2_28 = "2.28"
