[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "^0.16.0"

[dependencies.gio]
package = "gio-sys"
version = "^0.16.0"

[dependencies.gobject]
package = "gobject-sys"
version = "^0.16.0"

[dependencies.gtk]
package = "gtk-sys"
version = "^0.16.0"

[dependencies.soup]
package = "soup3-sys"
version = "^0.4.0"

[dependencies.java_script_core]
package = "javascriptcore-rs-sys"
version = "^1.0.0"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_2 = []
v2_4 = ["v2_2"]
v2_6 = []
v2_8 = ["v2_6"]
v2_10 = ["v2_8"]
v2_12 = ["v2_10"]
v2_14 = ["v2_12"]
v2_16 = ["v2_14"]
v2_18 = ["v2_16"]
v2_20 = ["v2_18"]
v2_22 = ["v2_20"]
v2_26 = ["v2_22"]
dox = []
v2_28 = ["v2_26"]

[lib]
name = "webkit2gtk_webextension_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
categories = ["api-bindings", "gui"]
description = "Rust bindings for the webkit2gtk-webextension library"
homepage = "http://gtk-rs.org/"
license = "MIT"
links = "webkit2gtk_webextension"
name = "webkit2gtk-webextension-sys"
repository = "https://github.com/gtk-rs/webkit2gtk-webextension-rs"
version = "0.16.2"
edition = "2021"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.webkit2gtk_web_extension_4_1]
name = "webkit2gtk-web-extension-4.1"
version = "2.4"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_6]
version = "2.6"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_8]
version = "2.8"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_10]
version = "2.10"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_12]
version = "2.12"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_14]
version = "2.14"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_16]
version = "2.16"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_18]
version = "2.18"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_20]
version = "2.20"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_22]
version = "2.22"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_26]
version = "2.26"

[package.metadata.system-deps.webkit2gtk_web_extension_4_1.v2_28]
version = "2.28"
